--- a/index.html
+++ b/index.html
@@ -2,54 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Miguel Ink | Tattoo Shop Chiang Mai</title>
+    <title>Miguel Ink | Tattoo Studio Chiang Mai</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional Tattoo Shop in Chiang Mai. Custom tattoos, traditional and modern styles at Miguel Ink.">
+    <meta name="description" content="Custom tattoo studio in Chiang Mai. Fine line, black & grey, and modern artistic tattoo styles at Miguel Ink.">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-    <h1>Miguel Ink</h1>
-    <p>Professional Tattoos in Chiang Mai</p>
-</header>
-
-<nav>
-    <a href="#about">About</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact</a>
+<!-- NAVIGATION -->
+<nav class="navbar">
+    <div class="nav-container">
+        <div class="logo">Miguel Ink</div>
+        <div class="nav-links">
+            <a href="#about">About</a>
+            <a href="#gallery">Work</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div>
 </nav>
 
-<section id="about">
-    <h2>About Us</h2>
-    <p>
-        Miguel Ink is a professional tattoo studio located in Chiang Mai, Thailand.
-        We specialise in custom designs, traditional tattoos, black & grey, fine line,
-        and modern artistic styles.
-    </p>
-</section>
+<!-- HERO SECTION -->
+<header class="hero">
+    <div class="hero-overlay">
+        <h1>Miguel Ink</h1>
+        <p>Custom Tattoo Studio • Chiang Mai</p>
+        <a href="#contact" class="btn">Book a Session</a>
+    </div>
+</header>
 
-<section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery">
-        <img src="https://via.placeholder.com/300" alt="Tattoo 1">
-        <img src="https://via.placeholder.com/300" alt="Tattoo 2">
-        <img src="https://via.placeholder.com/300" alt="Tattoo 3">
+<!-- ABOUT -->
+<section class="about" id="about">
+    <div class="container">
+        <h2>About</h2>
+        <p>
+            Miguel Ink is a professional tattoo studio based in Chiang Mai, Thailand.
+            Specialising in fine line, black & grey, and custom artistic designs,
+            we focus on precision, creativity, and high-quality craftsmanship.
+            Every piece is designed to be personal, timeless, and unique.
+        </p>
     </div>
 </section>
 
-<section id="contact">
-    <h2>Contact</h2>
-    <p>📍 Chiang Mai, Thailand</p>
-    <p>📱 WhatsApp / Phone: +66 XXXX XXX XXX</p>
-    <p>📷 Instagram: @miguelink</p>
+<!-- GALLERY -->
+<section class="gallery" id="gallery">
+    <div class="container">
+        <h2>Selected Work</h2>
+        <div class="grid">
+            <img src="https://via.placeholder.com/500x600" alt="Tattoo 1">
+            <img src="https://via.placeholder.com/500x600" alt="Tattoo 2">
+            <img src="https://via.placeholder.com/500x600" alt="Tattoo 3">
+            <img src="https://via.placeholder.com/500x600" alt="Tattoo 4">
+        </div>
+    </div>
 </section>
 
+<!-- CONTACT -->
+<section class="contact" id="contact">
+    <div class="container">
+        <h2>Contact</h2>
+        <p>Chiang Mai, Thailand</p>
+        <p>WhatsApp: +66 XXXX XXX XXX</p>
+        <p>Instagram: @miguelink</p>
+        <a href="#" class="btn-outline">Message on WhatsApp</a>
+    </div>
+</section>
+
+<!-- FOOTER -->
 <footer>
-    <p>© 2026 Miguel Ink | Chiang Mai</p>
+    <p>© 2026 Miguel Ink • All Rights Reserved</p>
 </footer>
 
 </body>
 </html>
-
-
