--- a/index.html
+++ b/index.html
@@ -2,57 +2,177 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Miguel Ink | Custom Tattoo Studio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Miguel Ink</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Space+Mono&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap" rel="stylesheet">
+
+<style>
+
+/* RESET */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  background: #ffffff;
+  color: #111;
+  overflow-x: hidden;
+}
+
+/* NAV */
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 8%;
+  font-weight: 600;
+  border-bottom: 2px solid #000;
+}
+
+nav a {
+  text-decoration: none;
+  color: #111;
+  margin-left: 30px;
+  transition: 0.3s;
+}
+
+nav a:hover {
+  color: #8B0000; /* subtle red */
+}
+
+/* HERO */
+.hero {
+  padding: 100px 8%;
+}
+
+.hero h1 {
+  font-size: 80px;
+  font-weight: 900;
+  line-height: 0.95;
+  text-transform: uppercase;
+}
+
+.hero span {
+  color: #8B0000;
+}
+
+.hero p {
+  margin-top: 25px;
+  font-size: 20px;
+  max-width: 600px;
+}
+
+/* BUTTON */
+.btn {
+  display: inline-block;
+  margin-top: 40px;
+  padding: 15px 35px;
+  border: 2px solid #000;
+  text-decoration: none;
+  color: #111;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  background: #8B0000;
+  color: #fff;
+  border-color: #8B0000;
+}
+
+/* SECTION */
+.section {
+  padding: 100px 8%;
+  border-top: 2px solid #000;
+}
+
+.section h2 {
+  font-size: 50px;
+  font-weight: 900;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+}
+
+/* GRID */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 25px;
+}
+
+.card {
+  border: 2px solid #000;
+  padding: 60px 30px;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.card:hover {
+  border-color: #8B0000;
+  transform: translateY(-5px);
+}
+
+/* FOOTER */
+footer {
+  padding: 40px 8%;
+  border-top: 2px solid #000;
+  font-size: 14px;
+}
+
+footer span {
+  color: #8B0000;
+}
+
+/* MOBILE */
+@media(max-width: 768px) {
+  .hero h1 {
+    font-size: 50px;
+  }
+
+  .section h2 {
+    font-size: 36px;
+  }
+}
+
+</style>
 </head>
-
 <body>
 
 <nav>
-    <div class="nav-left">MI</div>
-    <div class="nav-right">
-        <a href="#work">WORK</a>
-        <a href="#about">ABOUT</a>
-        <a href="#contact">BOOK</a>
-    </div>
+  <div>MIGUEL INK</div>
+  <div>
+    <a href="#">Work</a>
+    <a href="#">About</a>
+    <a href="#">Book</a>
+  </div>
 </nav>
 
-<header class="hero">
-    <h1>MIGUEL<br>INK.</h1>
-    <p>Custom Tattoo Studio — Chiang Mai, Thailand</p>
-    <a href="#contact" class="btn">BOOK A SESSION</a>
-</header>
-
-<section id="work" class="work">
-    <h2>SELECTED WORK</h2>
-    <div class="grid">
-        <img src="https://via.placeholder.com/500x600">
-        <img src="https://via.placeholder.com/500x600">
-        <img src="https://via.placeholder.com/500x600">
-        <img src="https://via.placeholder.com/500x600">
-    </div>
+<section class="hero">
+  <h1>Bold.<br>Clean.<br><span>Permanent.</span></h1>
+  <p>Custom blackwork and fine line tattoos. Precision. Detail. No compromises.</p>
+  <a href="#" class="btn">Book Appointment</a>
 </section>
 
-<section id="about" class="about">
-    <h2>ABOUT</h2>
-    <p>
-        Fine line. Black & grey. Custom modern tattoo design.
-        Every piece is designed individually and executed with precision.
-        Private studio environment in Chiang Mai.
-    </p>
+<section class="section">
+  <h2>Selected Work</h2>
+  <div class="grid">
+    <div class="card">Fine Line</div>
+    <div class="card">Blackwork</div>
+    <div class="card">Custom Designs</div>
+  </div>
 </section>
 
-<section id="contact" class="contact">
-    <h2>BOOK A SESSION</h2>
-    <p>WhatsApp: +66 XXX XXX XXX</p>
-    <p>Instagram: @miguelink</p>
+<section class="section">
+  <h2>About</h2>
+  <p>Independent tattoo artist focused on precision line work, bold compositions, and timeless designs. Every piece is created with intention and individuality.</p>
 </section>
 
 <footer>
-    © 2026 MIGUEL INK
+  © 2026 Miguel Ink — <span>All rights reserved.</span>
 </footer>
 
 </body>
