--- a/index.html
+++ b/index.html
@@ -204,30 +204,31 @@ footer span {
 <section class="section" id="contact">
   <h2>Contact</h2>
 
-  <form class="contact-form"
-        action="https://formspree.io/f/mbdagyjw"
-        method="POST">
+<form class="contact-form"
+      action="https://formspree.io/f/mbdagyjw"
+      method="POST">
 
-    <input type="hidden" name="_redirect" value="https://siobhantipton97-hue.github.io/miguel-ink/thankyou.html">
+  <input type="hidden" name="_redirect" 
+         value="https://siobhantipton97-hue.github.io/miguel-ink/thankyou.html">
 
-    <div class="form-group">
-      <label>Name</label>
-      <input type="text" name="name" required>
-    </div>
+  <div class="form-group">
+    <label>Name</label>
+    <input type="text" name="name" required>
+  </div>
 
-    <div class="form-group">
-      <label>Email</label>
-      <input type="email" name="email" required>
-    </div>
+  <div class="form-group">
+    <label>Email</label>
+    <input type="email" name="email" required>
+  </div>
 
-    <div class="form-group">
-      <label>Message</label>
-      <textarea name="message" rows="5" required></textarea>
-    </div>
+  <div class="form-group">
+    <label>Message</label>
+    <textarea name="message" rows="5" required></textarea>
+  </div>
 
-    <button type="submit" class="btn">Send Message</button>
+  <button type="submit" class="btn">Send Message</button>
 
-  </form>
+</form>
 </section>
 
 <footer>
