--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ nav a:hover {
   transform: translateY(-5px);
 }
 
-/* CONTACT FORM */
+/* CONTACT */
 .contact-form {
   max-width: 600px;
 }
@@ -158,13 +158,8 @@ footer span {
 
 /* MOBILE */
 @media(max-width: 768px) {
-  .hero h1 {
-    font-size: 50px;
-  }
-
-  .section h2 {
-    font-size: 36px;
-  }
+  .hero h1 { font-size: 50px; }
+  .section h2 { font-size: 36px; }
 }
 
 </style>
@@ -198,42 +193,61 @@ footer span {
 
 <section class="section" id="about">
   <h2>About</h2>
-  <p>Independent tattoo artist based in Chiang Mai focused on precision line work, bold compositions, and timeless designs. Every piece is created with intention and individuality.</p>
+  <p>Independent tattoo artist based in Chiang Mai focused on precision line work, bold compositions, and timeless designs.</p>
 </section>
 
 <section class="section" id="contact">
   <h2>Contact</h2>
 
-<form class="contact-form"
-      action="https://formspree.io/f/mbdagyjw"
-      method="POST">
+  <form class="contact-form"
+        action="https://formspree.io/f/mbdagyjw"
+        method="POST"
+        onsubmit="return redirectAfterSubmit(event)">
 
-  <input type="hidden" name="_redirect" 
-         value="https://siobhantipton97-hue.github.io/miguel-ink/thankyou.html">
+    <div class="form-group">
+      <label>Name</label>
+      <input type="text" name="name" required>
+    </div>
 
-  <div class="form-group">
-    <label>Name</label>
-    <input type="text" name="name" required>
-  </div>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="email" name="email" required>
+    </div>
 
-  <div class="form-group">
-    <label>Email</label>
-    <input type="email" name="email" required>
-  </div>
+    <div class="form-group">
+      <label>Message</label>
+      <textarea name="message" rows="5" required></textarea>
+    </div>
 
-  <div class="form-group">
-    <label>Message</label>
-    <textarea name="message" rows="5" required></textarea>
-  </div>
+    <button type="submit" class="btn">Send Message</button>
 
-  <button type="submit" class="btn">Send Message</button>
-
-</form>
+  </form>
 </section>
 
 <footer>
   © 2026 Miguel Ink — <span>Chiang Mai, Thailand</span>
 </footer>
+
+<script>
+function redirectAfterSubmit(event) {
+  event.preventDefault();
+  const form = event.target;
+
+  fetch(form.action, {
+    method: form.method,
+    body: new FormData(form),
+    headers: { 'Accept': 'application/json' }
+  }).then(response => {
+    if (response.ok) {
+      window.location.href = "thankyou.html";
+    } else {
+      alert("There was a problem submitting the form.");
+    }
+  });
+
+  return false;
+}
+</script>
 
 </body>
 </html>
