--- a/thankyou.html
+++ b/thankyou.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Thank You</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 100px 20px;
+    }
 
+    h1 {
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    a {
+      color: #fff;
+      border: 1px solid #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    a:hover {
+      background-color: #fff;
+      color: #000;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Thank You!</h1>
+  <p>Your message has been sent. We’ll get back to you shortly.</p>
+  <a href="index.html">Back to Home</a>
+
+</body>
+</html>
