--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@ footer span {
       <!-- 30 Images -->
       <!-- First Set -->
       <script>
-        for (let i = 1; i <= 30; i++) {
-          document.write('<img src="images/tattoo' + i + '.jpg">');
-        }
-        for (let i = 1; i <= 30; i++) {
-          document.write('<img src="images/tattoo' + i + '.jpg">');
-        }
+       <img src="images/tattoo1.jpg">
+<img src="images/tattoo2.jpg">
+<img src="images/tattoo3.jpg">
+<img src="images/tattoo4.jpg">
+<img src="images/tattoo5.jpg">
+<img src="images/tattoo6.jpg">
       </script>
 
     </div>
