--- a/index.html
+++ b/index.html
@@ -238,18 +238,17 @@ footer span {
 <section class="hero">
 
   <!-- Slideshow Background -->
-  <div class="slideshow">
-    <div class="slide-track">
-
-      <!-- 30 Images -->
-      <!-- First Set -->
-      <script>
-       <img src="images/tattoo1.jpg">
-<img src="images/tattoo2.jpg">
-<img src="images/tattoo3.jpg">
-<img src="images/tattoo4.jpg">
-<img src="images/tattoo5.jpg">
-<img src="images/tattoo6.jpg">
+ <div class="slideshow">
+  <div class="slide-track">
+    <img src="./images/tattoo1.jpg" alt="">
+    <img src="./images/tattoo2.jpg" alt="">
+    <img src="./images/tattoo3.jpg" alt="">
+    <img src="./images/tattoo4.jpg" alt="">
+    <img src="./images/tattoo5.jpg" alt="">
+    <img src="./images/tattoo6.jpg" alt="">
+    <img src="./images/tattoo7.jpg" alt="">
+    <img src="./images/tattoo8.jpg" alt="">
+  </div>
       </script>
 
     </div>
