--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Miguel Ink</title>
+<title>Miguel Ink | Tattoo Studio Chiang Mai</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap" rel="stylesheet">
 
 <style>
 
@@ -15,19 +17,41 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: white;
-  color: black;
+  font-family: 'Inter', sans-serif;
+  background: #ffffff;
+  color: #111;
   overflow-x: hidden;
 }
 
-/* HERO SECTION */
+/* NAV */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 8%;
+  font-weight: 600;
+  border-bottom: 2px solid #000;
+}
+
+.logo {
+  height: 40px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #111;
+  margin-left: 30px;
+  transition: 0.3s;
+}
+
+nav a:hover {
+  color: #8B0000;
+}
+
+/* HERO */
 .hero {
   position: relative;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  padding-left: 8%;
+  padding: 120px 8%;
   overflow: hidden;
 }
 
@@ -39,14 +63,24 @@ body {
   width: 200%;
   height: 100%;
   display: flex;
-  animation: scroll 60s linear infinite;
+  animation: scroll 80s linear infinite;
+  z-index: 0;
 }
 
 .slideshow img {
-  width: 400px;
+  width: 500px;
   height: 100%;
   object-fit: cover;
-  opacity: 0.15;
+  opacity: 0.08;   /* FADED EFFECT */
+}
+
+/* Dark overlay fade */
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to right, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0.85) 40%, rgba(255,255,255,0.95) 100%);
+  z-index: 1;
 }
 
 @keyframes scroll {
@@ -54,62 +88,123 @@ body {
   to { transform: translateX(-50%); }
 }
 
-/* HERO CONTENT */
 .hero-content {
   position: relative;
   z-index: 2;
-  max-width: 600px;
-}
-
-.logo {
-  width: 180px;
-  margin-bottom: 30px;
 }
 
 .hero h1 {
   font-size: 80px;
   font-weight: 900;
-  line-height: 0.9;
+  line-height: 0.95;
+  text-transform: uppercase;
 }
 
-.hero h1 span {
-  color: red;
+.hero span {
+  color: #8B0000;
 }
 
 .hero p {
-  margin-top: 20px;
-  font-size: 18px;
-  max-width: 500px;
+  margin-top: 25px;
+  font-size: 20px;
+  max-width: 600px;
 }
 
 .btn {
   display: inline-block;
-  margin-top: 30px;
-  padding: 14px 30px;
-  border: 2px solid black;
+  margin-top: 40px;
+  padding: 15px 35px;
+  border: 2px solid #000;
   text-decoration: none;
-  font-weight: bold;
-  color: black;
+  color: #111;
+  font-weight: 600;
   transition: 0.3s;
+  background: transparent;
+  cursor: pointer;
 }
 
 .btn:hover {
-  background: red;
-  color: white;
-  border-color: red;
+  background: #8B0000;
+  color: #fff;
+  border-color: #8B0000;
 }
 
-/* SECTION */
-section {
-  padding: 80px 10%;
-  text-align: center;
+/* SECTIONS */
+.section {
+  padding: 100px 8%;
+  border-top: 2px solid #000;
 }
 
+.section h2 {
+  font-size: 50px;
+  font-weight: 900;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+}
+
+/* GRID */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 25px;
+}
+
+.card {
+  border: 2px solid #000;
+  padding: 60px 30px;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.card:hover {
+  border-color: #8B0000;
+  transform: translateY(-5px);
+}
+
+/* CONTACT */
+.contact-form {
+  max-width: 600px;
+}
+
+.form-group {
+  margin-bottom: 25px;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 15px;
+  border: 2px solid #000;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  outline: none;
+  transition: 0.3s;
+}
+
+input:focus, textarea:focus {
+  border-color: #8B0000;
+}
+
+/* FOOTER */
 footer {
-  background: black;
-  color: white;
-  text-align: center;
-  padding: 20px;
+  padding: 40px 8%;
+  border-top: 2px solid #000;
+  font-size: 14px;
+}
+
+footer span {
+  color: #8B0000;
+}
+
+/* MOBILE */
+@media(max-width: 768px) {
+  .hero h1 { font-size: 50px; }
+  .section h2 { font-size: 36px; }
 }
 
 </style>
@@ -117,11 +212,20 @@ footer {
 
 <body>
 
+<nav>
+  <img src="./images/logo.png" alt="Miguel Ink Logo" class="logo">
+  <div>
+    <a href="#work">Work</a>
+    <a href="#about">About</a>
+    <a href="#contact">Book</a>
+  </div>
+</nav>
+
 <section class="hero">
 
-  <!-- SLIDESHOW -->
+  <!-- FADED SLIDESHOW -->
   <div class="slideshow">
-    <!-- First Set -->
+    <!-- Duplicate set for seamless scroll -->
     <img src="./images/tattoo1.jpg">
     <img src="./images/tattoo2.jpg">
     <img src="./images/tattoo3.jpg">
@@ -134,26 +238,6 @@ footer {
     <img src="./images/tattoo10.jpg">
     <img src="./images/tattoo11.jpg">
     <img src="./images/tattoo12.jpg">
-    <img src="./images/tattoo13.jpg">
-    <img src="./images/tattoo14.jpg">
-    <img src="./images/tattoo15.jpg">
-    <img src="./images/tattoo16.jpg">
-    <img src="./images/tattoo17.jpg">
-    <img src="./images/tattoo18.jpg">
-    <img src="./images/tattoo19.jpg">
-    <img src="./images/tattoo20.jpg">
-    <img src="./images/tattoo21.jpg">
-    <img src="./images/tattoo22.jpg">
-    <img src="./images/tattoo23.jpg">
-    <img src="./images/tattoo24.jpg">
-    <img src="./images/tattoo25.jpg">
-    <img src="./images/tattoo26.jpg">
-    <img src="./images/tattoo27.jpg">
-    <img src="./images/tattoo28.jpg">
-    <img src="./images/tattoo29.jpg">
-    <img src="./images/tattoo30.jpg">
-
-    <!-- Duplicate for seamless scroll -->
     <img src="./images/tattoo1.jpg">
     <img src="./images/tattoo2.jpg">
     <img src="./images/tattoo3.jpg">
@@ -162,34 +246,80 @@ footer {
     <img src="./images/tattoo6.jpg">
   </div>
 
-  <!-- HERO TEXT -->
   <div class="hero-content">
-    <img src="./images/logo.png" alt="Miguel Ink Logo" class="logo">
-
-    <h1>
-      BOLD.<br>
-      CLEAN.<br>
-      <span>PERMANENT.</span>
-    </h1>
-
-    <p>
-      Custom blackwork and fine line tattoos in Chiang Mai.
-      Precision. Detail. No compromises.
-    </p>
-
-    <a href="mailto:your@email.com" class="btn">Book Appointment</a>
+    <h1>Bold.<br>Clean.<br><span>Permanent.</span></h1>
+    <p>Custom blackwork and fine line tattoos in Chiang Mai. Precision. Detail. No compromises.</p>
+    <a href="#contact" class="btn">Book Appointment</a>
   </div>
 
 </section>
 
-<section>
-  <h2>About Miguel Ink</h2>
-  <p>Professional tattoo artistry focused on bold composition, clean execution, and timeless design.</p>
+<section class="section" id="work">
+  <h2>Selected Work</h2>
+  <div class="grid">
+    <div class="card">Fine Line</div>
+    <div class="card">Blackwork</div>
+    <div class="card">Custom Designs</div>
+  </div>
+</section>
+
+<section class="section" id="about">
+  <h2>About</h2>
+  <p>Independent tattoo artist based in Chiang Mai focused on precision line work, bold compositions, and timeless designs.</p>
+</section>
+
+<section class="section" id="contact">
+  <h2>Contact</h2>
+
+  <form class="contact-form"
+        action="https://formspree.io/f/mbdagyjw"
+        method="POST"
+        onsubmit="return redirectAfterSubmit(event)">
+
+    <div class="form-group">
+      <label>Name</label>
+      <input type="text" name="name" required>
+    </div>
+
+    <div class="form-group">
+      <label>Email</label>
+      <input type="email" name="email" required>
+    </div>
+
+    <div class="form-group">
+      <label>Message</label>
+      <textarea name="message" rows="5" required></textarea>
+    </div>
+
+    <button type="submit" class="btn">Send Message</button>
+
+  </form>
 </section>
 
 <footer>
-  © 2026 Miguel Ink. All Rights Reserved.
+  © 2026 Miguel Ink — <span>Chiang Mai, Thailand</span>
 </footer>
+
+<script>
+function redirectAfterSubmit(event) {
+  event.preventDefault();
+  const form = event.target;
+
+  fetch(form.action, {
+    method: form.method,
+    body: new FormData(form),
+    headers: { 'Accept': 'application/json' }
+  }).then(response => {
+    if (response.ok) {
+      window.location.href = "thankyou.html";
+    } else {
+      alert("There was a problem submitting the form.");
+    }
+  });
+
+  return false;
+}
+</script>
 
 </body>
 </html>
