--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@ nav {
   border-bottom: 2px solid #000;
 }
 
-.logo {
-  height: 40px;
-}
-
 nav a {
   text-decoration: none;
   color: #111;
@@ -48,48 +44,36 @@ nav a:hover {
   color: #8B0000;
 }
 
+/* LOGO SIZE INCREASED */
+.logo img {
+  height: 80px;
+  width: auto;
+}
+
+/* HERO */
 .hero {
   position: relative;
   padding: 120px 8%;
   overflow: hidden;
 }
 
-/* Slideshow container */
-.slideshow {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  overflow: hidden;
+/* Bigger headline */
+.hero h1 {
+  font-size: 120px;
+  font-weight: 900;
+  line-height: 0.9;
+  text-transform: uppercase;
 }
 
-/* Moving track */
-.slide-track {
-  display: flex;
-  width: calc(500px * 12);
-  animation: scroll 40s linear infinite;
+/* Permanent red */
+.hero span {
+  color: #8B0000;
 }
 
-/* Images */
-.slide-track img {
-  width: 500px;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.12;
-}
-
-/* Text above slideshow */
-.hero-content {
-  position: relative;
-  z-index: 2;
-}
-
-/* Animation */
-@keyframes scroll {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
+.hero p {
+  margin-top: 25px;
+  font-size: 20px;
+  max-width: 600px;
 }
 
 .btn {
@@ -109,6 +93,40 @@ nav a:hover {
   background: #8B0000;
   color: #fff;
   border-color: #8B0000;
+}
+
+/* SLIDESHOW */
+.slideshow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.slide-track {
+  display: flex;
+  width: calc(500px * 12);
+  animation: scroll 40s linear infinite;
+}
+
+.slide-track img {
+  width: 500px;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.12;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes scroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
 }
 
 /* SECTIONS */
@@ -185,7 +203,7 @@ footer span {
 
 /* MOBILE */
 @media(max-width: 768px) {
-  .hero h1 { font-size: 50px; }
+  .hero h1 { font-size: 60px; }
   .section h2 { font-size: 36px; }
 }
 
@@ -195,7 +213,9 @@ footer span {
 <body>
 
 <nav>
-  <img src="file_000000009af8720698284795f6c0d4e1.png" alt="Miguel Ink Logo" class="logo">
+  <div class="logo">
+    <img src="file_000000009af8720698284795f6c0d4e1.png" alt="Miguel Ink Logo">
+  </div>
   <div>
     <a href="#work">Work</a>
     <a href="#about">About</a>
@@ -205,7 +225,6 @@ footer span {
 
 <section class="hero">
 
-  <!-- SLIDESHOW BACKGROUND -->
   <div class="slideshow">
     <div class="slide-track">
       <img src="images/tattoo1.jpg">
@@ -224,12 +243,18 @@ footer span {
   </div>
 
   <div class="hero-content">
-    <h1>Bold.<br>Clean.<br><span>Permanent.</span></h1>
+    <h1>
+      Bold.<br>
+      Clean.<br>
+      <span>Permanent.</span>
+    </h1>
     <p>Custom blackwork and fine line tattoos in Chiang Mai. Precision. Detail. No compromises.</p>
     <a href="#contact" class="btn">Book Appointment</a>
   </div>
 
 </section>
+
+<!-- EVERYTHING BELOW UNCHANGED -->
 
 <section class="section" id="work">
   <h2>Selected Work</h2>
