--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ h2 {
 
 <!-- NAV -->
 <nav>
-  <img src="file_000000009af8720698284795f6c0d4e1.png" alt="Miguel Ink Logo">
+  <img src="logo.png" alt="Miguel Ink Logo">
   <ul>
     <li><a href="#work">Work</a></li>
     <li><a href="#about">About</a></li>
