--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Miguel Art Tattoo</title>
 
+<!-- VINTAGE DISPLAY FONT -->
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
+
 <style>
 
 /* RESET */
@@ -19,7 +22,7 @@ html {
 }
 
 body {
-  font-family: 'Arial Black', Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background: #000;
   color: #fff;
 }
@@ -34,11 +37,17 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid #b30000;
+  border-bottom: 1px solid #111;
 }
 
 nav img {
-  height: 90px;
+  height: 95px;
+  filter: drop-shadow(0 0 12px rgba(255,0,0,0.6));
+  transition: 0.3s;
+}
+
+nav img:hover {
+  filter: drop-shadow(0 0 18px rgba(255,0,0,0.9));
 }
 
 nav ul {
@@ -62,13 +71,28 @@ nav ul li a:hover {
 /* HERO SECTION */
 .hero {
   position: relative;
-  padding: 140px 8%;
+  padding: 150px 8%;
   overflow: hidden;
-  border-bottom: 2px solid #b30000;
+  border-bottom: 1px solid #111;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  width: 600px;
+  height: 600px;
+  background: radial-gradient(circle, rgba(255,0,0,0.25) 0%, rgba(0,0,0,0) 70%);
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
 }
 
 .hero h1 {
-  font-size: 85px;
+  position: relative;
+  z-index: 1;
+  font-family: 'Cinzel', serif;
+  font-size: 90px;
   font-weight: 900;
   line-height: 0.95;
   text-transform: uppercase;
@@ -79,6 +103,8 @@ nav ul li a:hover {
 }
 
 .hero p {
+  position: relative;
+  z-index: 1;
   margin-top: 25px;
   font-size: 18px;
   max-width: 500px;
@@ -86,6 +112,8 @@ nav ul li a:hover {
 }
 
 .hero button {
+  position: relative;
+  z-index: 1;
   margin-top: 35px;
   padding: 16px 40px;
   background: #ff0000;
@@ -117,7 +145,7 @@ nav ul li a:hover {
 .slideshow img {
   width: 100%;
   object-fit: cover;
-  opacity: 0.06;
+  opacity: 0.05;
 }
 
 @keyframes scroll {
@@ -127,15 +155,16 @@ nav ul li a:hover {
 
 /* SECTIONS */
 section {
-  padding: 120px 8%;
+  padding: 130px 8%;
   border-bottom: 1px solid #111;
 }
 
 h2 {
-  font-size: 36px;
-  margin-bottom: 50px;
+  font-family: 'Cinzel', serif;
+  font-size: 40px;
+  margin-bottom: 60px;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   color: #ff0000;
 }
 
@@ -143,36 +172,37 @@ h2 {
 .work-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 40px;
+  gap: 50px;
 }
 
 .card {
-  border: 2px solid #111;
-  padding: 50px;
+  border: 1px solid #111;
+  padding: 60px;
   text-align: center;
   font-weight: bold;
   font-size: 20px;
-  transition: 0.3s;
   background: #0a0a0a;
+  transition: 0.3s;
 }
 
 .card:hover {
   border-color: #ff0000;
-  transform: translateY(-8px);
+  transform: translateY(-10px);
+  box-shadow: 0 0 20px rgba(255,0,0,0.2);
 }
 
-/* ABOUT TEXT */
+/* ABOUT */
 #about p {
   max-width: 700px;
   color: #ccc;
-  line-height: 1.6;
+  line-height: 1.7;
 }
 
 /* BOOKING FORM */
 .booking-box {
   max-width: 600px;
-  border: 2px solid #111;
-  padding: 50px;
+  border: 1px solid #111;
+  padding: 60px;
   background: #0a0a0a;
 }
 
@@ -216,19 +246,19 @@ h2 {
 /* MOBILE */
 @media(max-width: 768px) {
   .hero {
-    padding: 90px 8%;
+    padding: 100px 8%;
   }
 
   .hero h1 {
     font-size: 55px;
   }
 
-  nav ul {
-    gap: 20px;
+  nav img {
+    height: 75px;
   }
 
-  nav img {
-    height: 70px;
+  nav ul {
+    gap: 20px;
   }
 }
 
@@ -236,7 +266,6 @@ h2 {
 </head>
 <body>
 
-<!-- NAV -->
 <nav>
   <img src="logo.png" alt="Miguel Art Tattoo Logo">
   <ul>
@@ -246,7 +275,6 @@ h2 {
   </ul>
 </nav>
 
-<!-- HERO -->
 <div class="hero">
   <div class="slideshow">
     <img src="images/tattoo1.jpg">
@@ -276,7 +304,6 @@ h2 {
   <button onclick="document.getElementById('book').scrollIntoView()">BOOK APPOINTMENT</button>
 </div>
 
-<!-- WORK -->
 <section id="work">
   <h2>Selected Work</h2>
   <div class="work-grid">
@@ -286,25 +313,22 @@ h2 {
   </div>
 </section>
 
-<!-- ABOUT -->
 <section id="about">
   <h2>About</h2>
   <p>Miguel Art Tattoo specialises in detailed, clean and long-lasting tattoo work. Every piece is designed with care and precision.</p>
 </section>
 
-<!-- BOOK -->
 <section id="book">
   <h2>Book an Appointment</h2>
-
   <div class="booking-box">
-   <form action="https://formspree.io/f/mbdagyjw" method="POST">
-     <input type="text" name="full_name" placeholder="Full Name" required>
-     <input type="email" name="email" placeholder="Email Address" required>
-     <input type="text" name="idea" placeholder="Tattoo Idea / Placement">
-     <textarea name="description" placeholder="Describe your idea"></textarea>
-     <input type="hidden" name="_redirect" value="https://siobhantipton97-hue.github.io/miguel-ink/thankyou.html">
-     <button type="submit">Submit Booking Request</button>
-   </form>
+    <form action="https://formspree.io/f/mbdagyjw" method="POST">
+      <input type="text" name="full_name" placeholder="Full Name" required>
+      <input type="email" name="email" placeholder="Email Address" required>
+      <input type="text" name="idea" placeholder="Tattoo Idea / Placement">
+      <textarea name="description" placeholder="Describe your idea"></textarea>
+      <input type="hidden" name="_redirect" value="https://siobhantipton97-hue.github.io/miguel-ink/thankyou.html">
+      <button type="submit">Submit Booking Request</button>
+    </form>
   </div>
 </section>
 
