--- a/index.html
+++ b/index.html
@@ -334,6 +334,30 @@ h2 {
 </p>
   </div>
 </section>
+<script>
+  const form = document.getElementById("booking-form");
+  const message = document.getElementById("form-message");
 
+  form.addEventListener("submit", async function(event) {
+    event.preventDefault();
+
+    const data = new FormData(form);
+
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: data,
+      headers: {
+        'Accept': 'application/json'
+      }
+    });
+
+    if (response.ok) {
+      form.reset();
+      message.style.display = "block";
+    } else {
+      alert("There was a problem submitting the form.");
+    }
+  });
+</script>
 </body>
 </html>
