--- a/index.html
+++ b/index.html
@@ -5,27 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Miguel Art Tattoo</title>
 
-<!-- VINTAGE DISPLAY FONT -->
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
 
 <style>
 
 /* RESET */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: #000;
-  color: #fff;
-}
+* { margin: 0; padding: 0; box-sizing: border-box; }
+html { scroll-behavior: smooth; }
+body { font-family: Arial, Helvetica, sans-serif; background: #000; color: #fff; }
 
 /* NAVIGATION */
 nav {
@@ -46,15 +33,9 @@ nav img {
   transition: 0.3s;
 }
 
-nav img:hover {
-  filter: drop-shadow(0 0 18px rgba(255,0,0,0.9));
-}
+nav img:hover { filter: drop-shadow(0 0 18px rgba(255,0,0,0.9)); }
 
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 40px;
-}
+nav ul { list-style: none; display: flex; gap: 40px; }
 
 nav ul li a {
   text-decoration: none;
@@ -64,11 +45,9 @@ nav ul li a {
   transition: 0.3s;
 }
 
-nav ul li a:hover {
-  color: #ff0000;
-}
+nav ul li a:hover { color: #ff0000; }
 
-/* HERO SECTION */
+/* HERO */
 .hero {
   position: relative;
   padding: 150px 8%;
@@ -98,9 +77,7 @@ nav ul li a:hover {
   text-transform: uppercase;
 }
 
-.hero h1 span {
-  color: #ff0000;
-}
+.hero h1 span { color: #ff0000; }
 
 .hero p {
   position: relative;
@@ -126,11 +103,9 @@ nav ul li a:hover {
   transition: 0.3s;
 }
 
-.hero button:hover {
-  background: #b30000;
-}
+.hero button:hover { background: #b30000; }
 
-/* BACKGROUND SLIDESHOW */
+/* SLIDESHOW */
 .slideshow {
   position: absolute;
   top: 0;
@@ -142,11 +117,7 @@ nav ul li a:hover {
   z-index: -1;
 }
 
-.slideshow img {
-  width: 100%;
-  object-fit: cover;
-  opacity: 0.05;
-}
+.slideshow img { width: 100%; object-fit: cover; opacity: 0.05; }
 
 @keyframes scroll {
   from { transform: translateX(0); }
@@ -154,10 +125,7 @@ nav ul li a:hover {
 }
 
 /* SECTIONS */
-section {
-  padding: 130px 8%;
-  border-bottom: 1px solid #111;
-}
+section { padding: 130px 8%; border-bottom: 1px solid #111; }
 
 h2 {
   font-family: 'Cinzel', serif;
@@ -192,11 +160,7 @@ h2 {
 }
 
 /* ABOUT */
-#about p {
-  max-width: 700px;
-  color: #ccc;
-  line-height: 1.7;
-}
+#about p { max-width: 700px; color: #ccc; line-height: 1.7; }
 
 /* BOOKING FORM */
 .booking-box {
@@ -223,10 +187,7 @@ h2 {
   border-color: #ff0000;
 }
 
-.booking-box textarea {
-  resize: vertical;
-  min-height: 120px;
-}
+.booking-box textarea { resize: vertical; min-height: 120px; }
 
 .booking-box button {
   background: #ff0000;
@@ -239,27 +200,13 @@ h2 {
   transition: 0.3s;
 }
 
-.booking-box button:hover {
-  background: #b30000;
-}
+.booking-box button:hover { background: #b30000; }
 
-/* MOBILE */
 @media(max-width: 768px) {
-  .hero {
-    padding: 100px 8%;
-  }
-
-  .hero h1 {
-    font-size: 55px;
-  }
-
-  nav img {
-    height: 75px;
-  }
-
-  nav ul {
-    gap: 20px;
-  }
+  .hero { padding: 100px 8%; }
+  .hero h1 { font-size: 55px; }
+  nav img { height: 75px; }
+  nav ul { gap: 20px; }
 }
 
 </style>
@@ -322,42 +269,62 @@ h2 {
   <h2>Book an Appointment</h2>
   <div class="booking-box">
     <form id="booking-form" action="https://formspree.io/f/mbdagyjw" method="POST">
-  <input type="text" name="full_name" placeholder="Full Name" required>
-  <input type="email" name="email" placeholder="Email Address" required>
-  <input type="text" name="idea" placeholder="Tattoo Idea / Placement">
-  <textarea name="description" placeholder="Describe your idea"></textarea>
-  <button type="submit">Submit Booking Request</button>
-</form>
+      <input type="text" name="full_name" placeholder="Full Name" required>
+      <input type="email" name="email" placeholder="Email Address" required>
+      <input type="text" name="idea" placeholder="Tattoo Idea / Placement">
+      <textarea name="description" placeholder="Describe your idea"></textarea>
+      <button type="submit">Submit Booking Request</button>
+    </form>
 
-<p id="form-message" style="margin-top:20px; display:none; color:#ff0000; font-weight:bold;">
-  Thank you. Your booking request has been sent. We will contact you soon.
-</p>
+    <!-- Updated Success Message -->
+    <p id="form-message" style="margin-top:20px; display:none; color:#ff0000; font-weight:bold; opacity:0;">
+      Thank you. Your booking request has been sent. We will contact you soon.
+    </p>
   </div>
 </section>
+
 <script>
   const form = document.getElementById("booking-form");
   const message = document.getElementById("form-message");
+  const button = form.querySelector("button");
 
   form.addEventListener("submit", async function(event) {
     event.preventDefault();
 
+    button.disabled = true;
+    button.innerText = "Sending...";
+
     const data = new FormData(form);
 
-    const response = await fetch(form.action, {
-      method: form.method,
-      body: data,
-      headers: {
-        'Accept': 'application/json'
-      }
-    });
+    try {
+      const response = await fetch(form.action, {
+        method: form.method,
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
 
-    if (response.ok) {
-      form.reset();
-      message.style.display = "block";
-    } else {
-      alert("There was a problem submitting the form.");
+      if (response.ok) {
+        form.reset();
+
+        message.style.display = "block";
+        setTimeout(() => {
+          message.style.transition = "opacity 0.6s ease";
+          message.style.opacity = "1";
+        }, 10);
+
+        button.innerText = "Sent ✓";
+      } else {
+        alert("There was a problem submitting the form.");
+        button.disabled = false;
+        button.innerText = "Submit Booking Request";
+      }
+    } catch (error) {
+      alert("Network error. Please try again.");
+      button.disabled = false;
+      button.innerText = "Submit Booking Request";
     }
   });
 </script>
+
 </body>
 </html>
