--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ h2 {
     <form id="booking-form" action="https://formspree.io/f/mbdagyjw" method="POST">
   <input type="text" name="full_name" placeholder="Full Name" required>
   <input type="email" name="email" placeholder="Email Address" required>
-  <input type="tel" name="mobile" placeholder="Mobile Number" required pattern="[0-9+\s()-]{7,20}">
+   <input type="tel" id="mobile" name="mobile" placeholder="Mobile Number" required>
   <input type="text" name="idea" placeholder="Tattoo Idea / Placement">
   <textarea name="description" placeholder="Describe your idea"></textarea>
   <button type="submit">Submit Booking Request</button>
@@ -324,6 +324,33 @@ h2 {
       button.disabled = false;
       button.innerText = "Submit Booking Request";
     }
+    /* AUTO FORMAT MOBILE NUMBER */
+const mobileInput = document.getElementById("mobile");
+
+mobileInput.addEventListener("input", function(e) {
+  let value = e.target.value.replace(/[^\d+]/g, "");
+
+  // Keep + only at start
+  if (value.indexOf("+") > 0) {
+    value = value.replace(/\+/g, "");
+  }
+
+  // Thailand format example
+  if (value.startsWith("+66")) {
+    value = value.replace("+66", "");
+    value = value.substring(0, 9);
+    value = value.replace(/(\d{2})(\d{3})(\d{0,4})/, function(_, a, b, c) {
+      return "+66 " + a + (b ? " " + b : "") + (c ? " " + c : "");
+    });
+  } else {
+    value = value.substring(0, 10);
+    value = value.replace(/(\d{3})(\d{3})(\d{0,4})/, function(_, a, b, c) {
+      return a + (b ? " " + b : "") + (c ? " " + c : "");
+    });
+  }
+
+  e.target.value = value;
+});
   });
 </script>
 
