--- a/index.html
+++ b/index.html
@@ -261,10 +261,22 @@ h2 {
 </section>
 
 <section id="about">
-  <h2>About</h2>
-  <p>Miguel Art Tattoo specialises in detailed, clean and long-lasting tattoo work. Every piece is designed with care and precision.</p>
-</section>
+  <h2>About Miguel</h2>
+  <p>
+    Miguel is a professional tattoo artist based in Chiang Mai, specializing in detailed blackwork, fine line, and custom illustrative designs. 
+    Every piece is carefully designed to reflect the client’s story, personality, and vision.
+  </p>
 
+  <p>
+    With a strong focus on precision, hygiene, and artistic integrity, Miguel works closely with each client from concept to completion. 
+    Whether it’s a small meaningful piece or a large custom design, every tattoo is treated as a permanent work of art.
+  </p>
+
+  <p>
+    The studio environment is clean, welcoming, and fully committed to professional standards. 
+    Consultations are available to refine ideas and ensure every client leaves confident and satisfied.
+  </p>
+</section>
 <section id="book">
   <h2>Book an Appointment</h2>
   <div class="booking-box">
