--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@ h2 {
 </section>
 
 <section id="about">
-  <h2>About Miguel</h2>
+  <h2>About</h2>
   <p>
-    Miguel is a professional tattoo artist based in Chiang Mai, specializing in detailed blackwork, fine line, and custom illustrative designs. 
+    Miguel Art Tattoo is a professional tattoo shop based in Chiang Mai, specializing in detailed blackwork, fine line, and custom illustrative designs. 
     Every piece is carefully designed to reflect the client’s story, personality, and vision.
   </p>
 
   <p>
-    With a strong focus on precision, hygiene, and artistic integrity, Miguel works closely with each client from concept to completion. 
+    With a strong focus on precision, hygiene, and artistic integrity, our artists works closely with each client from concept to completion. 
     Whether it’s a small meaningful piece or a large custom design, every tattoo is treated as a permanent work of art.
   </p>
 
