--- a/index.html
+++ b/index.html
@@ -280,6 +280,25 @@ h2 {
   Visiting Chiang Mai? Stop by for a consultation or message ahead to secure your booking.
 </p>
 </section>
+  <section id="location">
+  <h2>Location</h2>
+
+  <p>
+    Located near Anusarn Market in Chiang Mai, Thailand. 
+    Easy access for both locals and international visitors.
+  </p>
+
+  <div style="margin-top:40px;">
+    <iframe 
+      src="https://www.google.com/maps?q=18.7827,99.0014&hl=en&z=17&output=embed"
+      width="100%" 
+      height="350" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>
+  </div>
+</section>
 <section id="book">
   <h2>Book an Appointment</h2>
   <div class="booking-box">
