--- a/index.html
+++ b/index.html
@@ -230,22 +230,53 @@ h2 {
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
 }
 
-/* WhatsApp Style */
-.whatsapp-btn {
-  background-color: #25D366;
+/* Floating Container */
+.floating-contact {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  z-index: 9999;
 }
 
-.whatsapp-btn:hover {
-  background-color: #1ebe5d;
+/* Red Glow Buttons */
+.floating-contact a {
+  display: block;
+  padding: 14px 22px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 50px;
+  text-align: center;
+  letter-spacing: 1px;
+  background: #b30000;
+  transition: 0.3s ease;
+  box-shadow: 0 0 10px #ff0000,
+              0 0 20px #ff0000,
+              0 0 40px rgba(255, 0, 0, 0.6);
+  animation: glowPulse 2s infinite alternate;
 }
 
-/* LINE Style */
-.line-btn {
-  background-color: #06C755;
+.floating-contact a:hover {
+  background: #ff0000;
+  box-shadow: 0 0 20px #ff0000,
+              0 0 40px #ff0000,
+              0 0 60px rgba(255, 0, 0, 0.9);
 }
 
-.line-btn:hover {
-  background-color: #05a647;
+@keyframes glowPulse {
+  from {
+    box-shadow: 0 0 10px #ff0000,
+                0 0 20px #ff0000,
+                0 0 30px rgba(255, 0, 0, 0.5);
+  }
+  to {
+    box-shadow: 0 0 20px #ff0000,
+                0 0 40px #ff0000,
+                0 0 60px rgba(255, 0, 0, 0.9);
+  }
 }
 </style>
 </head>
