--- a/index.html
+++ b/index.html
@@ -144,11 +144,10 @@ h2 {
   color: #ff0000;
 }
 
-/* WORK GRID */
 .work-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 50px;
+  gap: 30px;
 }
 
 .card {
@@ -331,10 +330,24 @@ h2 {
 <section id="work">
   <h2>Selected Work</h2>
   <div class="work-grid">
-    <div class="card">Fine Line</div>
-    <div class="card">Blackwork</div>
-    <div class="card">Custom Designs</div>
+
+  <div class="work-box">
+    Minimalist
   </div>
+
+  <div class="work-box">
+    Custom
+  </div>
+
+  <div class="work-box">
+    Spiritual
+  </div>
+
+  <div class="work-box">
+    Realism
+  </div>
+
+</div>
 </section>
 
 <section id="about">
