--- a/index.html
+++ b/index.html
@@ -285,6 +285,21 @@ h2 {
                 0 0 60px rgba(255, 0, 0, 0.9);
   }
 }
+ .work-box img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.work-box a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.work-box h3 {
+    margin-top: 10px;
+}
 </style>
 </head>
 <body>
@@ -329,26 +344,34 @@ h2 {
 
 <section id="work">
   <h2>Selected Work</h2>
-  <div class="work-grid">
-
   <div class="work-box">
-    Minimalist
-  </div>
-
-  <div class="work-box">
-    Custom
-  </div>
-
-  <div class="work-box">
-    Spiritual
-  </div>
-
-  <div class="work-box">
-    Realism
-  </div>
-
+    <a href="minimalist.html">
+        <img src="images/minimalist.jpg" alt="Minimalist Tattoo">
+        <h3>Minimalist</h3>
+    </a>
 </div>
-</section>
+
+<div class="work-box">
+    <a href="custom.html">
+        <img src="images/custom.jpg" alt="Custom Tattoo">
+        <h3>Custom</h3>
+    </a>
+</div>
+
+<div class="work-box">
+    <a href="spiritual.html">
+        <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
+        <h3>Spiritual</h3>
+    </a>
+</div>
+
+<div class="work-box">
+    <a href="realism.html">
+        <img src="images/realism.jpg" alt="Realism Tattoo">
+        <h3>Realism</h3>
+    </a>
+</div>
+ <section>
 
 <section id="about">
   <h2>About</h2>
