--- a/index.html
+++ b/index.html
@@ -346,27 +346,27 @@ h2 {
   <h2>Selected Work</h2>
   <div class="work-box">
     <a href="minimalist.html">
-        <img src="images/minimalist.jpg" alt="Minimalist Tattoo">
+        <img src="images/minimalist.jpeg" alt="Minimalist Tattoo">
         <h3>Minimalist</h3>
     </a>
 </div>
 
 <div class="work-box">
     <a href="custom.html">
-        <img src="images/custom.jpg" alt="Custom Tattoo">
+        <img src="images/custom.jpeg" alt="Custom Tattoo">
         <h3>Custom</h3>
     </a>
 </div>
 
 <div class="work-box">
     <a href="spiritual.html">
-        <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
+        <img src="images/spiritual.jpeg" alt="Spiritual Tattoo">
         <h3>Spiritual</h3>
     </a>
 </div>
 
 <div class="work-box">
-    <a href="realism.html">
+    <a href="realism.jpg">
         <img src="images/realism.jpg" alt="Realism Tattoo">
         <h3>Realism</h3>
     </a>
