--- a/index.html
+++ b/index.html
@@ -345,28 +345,28 @@ h2 {
 <section id="work">
   <h2>Selected Work</h2>
   <div class="work-box">
-    <a href="minimalist.jpeg">
+    <a href="images/minimalist.jpeg">
         <img src="images/minimalist.jpeg" alt="Minimalist Tattoo">
         <h3>Minimalist</h3>
     </a>
 </div>
 
 <div class="work-box">
-    <a href="custom.jpeg">
+    <a href="images/custom.jpeg">
         <img src="images/custom.jpeg" alt="Custom Tattoo">
         <h3>Custom</h3>
     </a>
 </div>
 
 <div class="work-box">
-   <a href="images/spiritual.jpg">
+    <a href="images/spiritual.jpg">
         <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
         <h3>Spiritual</h3>
     </a>
 </div>
 
 <div class="work-box">
-    <a href="realism.jpg">
+    <a href="images/realism.jpg">
         <img src="images/realism.jpg" alt="Realism Tattoo">
         <h3>Realism</h3>
     </a>
