--- a/index.html
+++ b/index.html
@@ -328,6 +328,11 @@ h2 {
     margin-top: 10px;
     color: white;
 }
+ @media (max-width: 768px) {
+    .work-grid {
+        grid-template-columns: 1fr;
+    }
+}
 </style>
 </head>
 <body>
