--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@ h2 {
 
 .work-box img:hover {
     transform: scale(1.05);
+    box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
 }
-
 .work-box h3 {
     margin-top: 10px;
     color: white;
