--- a/index.html
+++ b/index.html
@@ -320,9 +320,8 @@ h2 {
     transition: transform 0.3s ease;
 }
 
-.work-box img:hover {
+.work-box:hover img {
     transform: scale(1.05);
-    box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
 }
 .work-box h3 {
     margin-top: 10px;
