--- a/spiritual.html
+++ b/spiritual.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Spiritual Tattoos</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<h1 style="text-align:center; margin-top:40px;">Spiritual Tattoos</h1>
+
+<div class="gallery">
+    <img src="images/spiritual/1000003600.jpg" alt="">
+    <img src="images/spiritual/1000003603.jpg" alt="">
+    <img src="images/spiritual/1000003606.jpg" alt="">
+</div>
+
+</body>
+</html>
