--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ h2 {
 
         <!-- Spiritual -->
         <div class="work-box">
-            <a href="images/spiritual.jpg">
+            <a href="spiritual.html">
                 <img src="images/spiritual.jpg" alt="Spiritual Tattoo">
                 <h3>Spiritual</h3>
             </a>
