--- a/minimalist.html
+++ b/minimalist.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Minimalist Tattoos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <!-- Back Button -->
+    <div style="text-align:center; margin-top:30px;">
+        <a href="index.html" style="color:white; text-decoration:none; font-size:18px;">
+            ← Back to Home
+        </a>
+    </div>
+
+    <!-- Page Title -->
+    <h1 style="text-align:center; margin:30px 0;">Minimalist Tattoos</h1>
+
+    <!-- Gallery -->
+    <div class="gallery">
+        <img src="images/minimalist/1000003594.jpg" alt="Minimalist Tattoo">
+        <img src="images/minimalist/1000003621.jpg" alt="Minimalist Tattoo">
+        <img src="images/minimalist/1000003608.jpg" alt="Minimalist Tattoo">
+        <img src="images/minimalist/1000003612.jpg" alt="Minimalist Tattoo">
+    </div>
+
+</body>
+</html>
