--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ h2 {
 
         <!-- Minimalist -->
         <div class="work-box">
-            <a href="images/minimalist.jpeg">
+           <a href="minimalist.html">
                 <img src="images/minimalist.jpeg" alt="Minimalist Tattoo">
                 <h3>Minimalist</h3>
             </a>
@@ -392,7 +392,7 @@ h2 {
 
         <!-- Custom -->
         <div class="work-box">
-            <a href="images/custom.jpeg">
+            <a href="custom.html">
                 <img src="images/custom.jpeg" alt="Custom Tattoo">
                 <h3>Custom</h3>
             </a>
