--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ h2 {
 
         <!-- Realism -->
         <div class="work-box">
-            <a href="images/realism.jpg">
+            <a href="realism.html">
                 <img src="images/realism.jpg" alt="Realism Tattoo">
                 <h3>Realism</h3>
             </a>
