--- a/index.html
+++ b/index.html
@@ -404,18 +404,19 @@ footer {
   </p>
 </section>
 
+<!-- FIND US -->
 <section id="location" class="location">
-  <div class="location-content">
-    <h2>Find Us</h2>
-    <p>Located near Anusarn Market, Chiang Mai, Thailand.</p>
-  </div>
+  <h2>Find Us</h2>
+  <p>Located near Anusarn Market, Chiang Mai, Thailand.</p>
+</section>
 
-  <div class="map-container">
-    <iframe 
-      src="https://www.google.com/maps?q=18.7827,99.0014&hl=en&z=17&output=embed"
-      loading="lazy">
-    </iframe>
+<div class="map-full">
+  <iframe 
+    src="https://www.google.com/maps?q=18.7827,99.0014&hl=en&z=17&output=embed"
+    loading="lazy">
+  </iframe>
 
+  <div class="directions-wrap">
     <a 
       href="https://www.google.com/maps/dir/?api=1&destination=18.7827,99.0014"
       target="_blank"
